--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,6 +38,8 @@ jobs:
       - deploy:
           command: |
             if [ "${CIRCLE_BRANCH}" == "master" ]; then
+              git config --global user.email $GIT_EMAIL
+              git config --global user.name $GIT_NAME
               boot build-jar push-snapshot
               boot deploy
             fi
